--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/markdown_icon.svg" />
-    <title>Live Markdown</title>
+    <title>Markdown</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
